# ein-agent

./: README.md
catcher-agent-receiver-operator/: Makefile  charmcraft.yaml  pyproject.toml  requirements.txt  rockcraft.yaml  tox.ini
catcher-agent-receiver-operator/src/: charm.py  main.py  models.py
catcher-agent-worker/: .gitignore  Makefile  example-environment.yaml  pyproject.toml  rockcraft.yaml  run_workflow.py
catcher-agent-worker/catcher_agent_worker/: mcp_providers.py  worker.py
catcher-agent-worker/catcher_agent_worker/workflows/: helloworld.py
docs/: alertmanager-example.yaml  deploy-identity-platform.md  deploy-k8s-mcp.md  deploy.md  failure-cases.md
ein-agent-api-operator/: .gitignore  Makefile  alert-prompts-example.yaml  charmcraft.yaml  pyproject.toml  requirements.txt
ein-agent-api-operator/src/: charm.py
ein-agent-cli/: README.md  pyproject.toml
ein-agent-cli/ein_agent_cli/: alertmanager.py  command.py  console.py  models.py  orchestrator.py  slash_commands.py  temporal.py  ui.py
ein-agent-cli/ein_agent_cli/orchestrators/: humain_in_the_loop.py  human_in_the_loop.py
ein-agent-cli/ein_agent_cli/slash_commands/: __init__.py  alerts.py  base.py  compact_rca.py  complete.py  context.py  end.py  help.py  import_alerts.py  new.py  refresh.py  switch.py  switch_context.py  workflows.py
rocks/catcher-agent-receiver/src/: alert_registry.py  app.py
rocks/catcher-agent-worker/: .gitignore  example-environment.yaml  pyproject.toml  run_workflow.py
rocks/catcher-agent-worker/catcher_agent_worker/: worker.py
rocks/catcher-agent-worker/scripts/: start-worker.sh
rocks/ein-agent-api/: .gitignore  Makefile  pyproject.toml  requirements.txt  rockcraft.yaml
rocks/ein-agent-api/src/: app.py  main.py  temporal_client.py
rocks/ein-agent-worker/: Makefile  example-environment.yaml  pyproject.toml  rockcraft.yaml  run_workflow.py
rocks/ein-agent-worker/ein_agent_worker/: mcp_providers.py  worker.py
rocks/ein-agent-worker/ein_agent_worker/activities/: __init__.py  mcp.py
rocks/ein-agent-worker/ein_agent_worker/workflows/: helloworld.py  human_in_loop.py
rocks/ein-agent-worker/scripts/: start-worker.sh
