[project]
name = "catcher-agent-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.80.0",
    "openai-agents>=0.5.1",
    "temporalio>=1.19.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "temporal-lib-py>=1.8.4",
]
